# rust-simulation-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dev.py  index.html  pack.bat
src/: lib.rs  main.rs  model.rs  resource.rs  texture.rs  time.rs
src/model/: instance.rs  material.rs  mod.rs
src/shaders/: light.wgsl  shader.wgsl
src/window/: context.rs  frame.rs  light.rs  mod.rs  pipeline.rs
src/window/camera/: axis.rs  controller.rs  mod.rs  uniform.rs
