[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.3"
async-std = "1.12.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.70"
cgmath = "0.18.0"
tobj = { version = "3.2.4", features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
glob = "0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]
